--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -33,6 +33,32 @@
 /*----------------------------------------------------*/
 @import "home_1/facility";
 /*---------------------------------------------------- */
+/*Service area*/
+/*----------------------------------------------------*/
+@import "home_1/service";
+/*---------------------------------------------------- */
+/*Offer area*/
+/*----------------------------------------------------*/
+@import "home_1/offer";
+/*---------------------------------------------------- */
+/*Price area*/
+/*----------------------------------------------------*/
+@import "home_1/price";
+/*---------------------------------------------------- */
+/*Testimonial area*/
+/*----------------------------------------------------*/
+@import "home_1/testimonial";
+/*---------------------------------------------------- */
+/*Rooms area*/
+/*----------------------------------------------------*/
+@import "home_1/rooms";
+/*---------------------------------------------------- */
+/*Blog area*/
+/*----------------------------------------------------*/
+@import "home_1/blog";
+/*---------------------------------------------------- */
+
+
 
 
 /*Footer Section*/
