--- a/assets/scss/_predefine.scss
+++ b/assets/scss/_predefine.scss
@@ -297,7 +297,7 @@ a {
 		}
 	}
 	.sec_title {
-		font-size: 40px;
+		font-size: 44px;
 		font-weight: 600;
 		letter-spacing: -1px;
 		@media #{$md} {
@@ -333,7 +333,16 @@ a {
 		background-color: var(--bk-prime-c);
 	}
 }
-
+.swiper-container {
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+	overflow: hidden;
+	list-style: none;
+	padding: 0;
+	z-index: 1;
+	display: flex;
+}
 // txa-common-css-start
 
 @for $i from 1 through 40 {
