--- a/assets/scss/home_1/_hero.scss
+++ b/assets/scss/home_1/_hero.scss
@@ -1,3 +1,69 @@
+@keyframes line_animation {
+	0% {
+		top: 0px;
+		opacity: 1;
+	}
+	50% {
+		top: 50%;
+	}
+	100% {
+		top: 100%;
+		opacity: 1;
+	}
+}
+@keyframes line_animation_2 {
+	0% {
+		opacity: 1;
+		bottom: 0px;
+	}
+	50% {
+		bottom: 50%;
+	}
+	100% {
+		bottom: 100%;
+		opacity: 1;
+	}
+}
+
+.bk-hero-sec {
+	z-index: 1;
+	.line_animation {
+		top: 0px;
+		left: 50%;
+		z-index: -1;
+		width: 100%;
+		bottom: 0px;
+		display: block;
+		position: absolute;
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+		.line_area {
+			width: 7.7%;
+			height: 100%;
+			position: relative;
+			display: inline-block;
+			border-right: 1px solid #EFE5DC;
+			&:before {
+				width: 3px;
+				right: -2px;
+				content: "";
+				height: 60px;
+				position: absolute;
+				background-image: linear-gradient(-180deg, #C29D68 0%, rgba(194, 157, 104, 0) 100%);
+			}
+			&:nth-child(even) {
+				&:before { 
+					animation: line_animation 20s ease-out infinite;
+				}
+			}
+			&:nth-child(odd) {
+				&:before { 
+					animation: line_animation_2 20s linear infinite;
+				}
+			}
+		}
+	}
+}
 .bk-hero-text {
 	margin: 0 auto;
 	max-width: 1030px;
@@ -49,7 +115,7 @@
 	.hero_title {
 		font-size: 80px;
 		font-weight: 700;
-		line-height: 1.1;
+		line-height: 1.15;
 		padding-top: 24px;
 		padding-bottom: 40px;
 		@media #{$sm} {
@@ -78,6 +144,11 @@
 				background-color: var(--bk-prime-c);
 				border: 1px solid var(--bk-prime-c);
 			}
+			&:hover {
+				color: #fff;
+				background-color: #004040;
+				border: 1px solid #004040;
+			}
 		}
 	}
 }
@@ -100,6 +171,7 @@
 		&:before {
 			top: 0;
 			left: 0;
+			z-index: 1;
 			width: 100%;
 			height: 100%;
 			content: '';
@@ -175,9 +247,32 @@
 		border-radius: 32px;
 		white-space: nowrap;
 		background-color: #fff;
+		transition: all 300ms ease-in-out;
+		&:hover {
+			color: #fff;
+			background-color: var(--bk-prime-c);
+		}
 		@media #{$md,$sm,$xs,$xxs} {
 			margin-left: 0;
 		}
+	}
+}
+
+@keyframes border_animation {
+	0% {
+		-webkit-transform: scale(1);
+		transform: scale(1);
+		opacity: 0;
+	}
+	20% {
+		-webkit-transform: scale(1.24);
+		transform: scale(1.24);
+		opacity: 1;
+	}
+	100% {
+		-webkit-transform: scale(1.7);
+		transform: scale(1.7);
+		opacity: 0;
 	}
 }
 .bk-hero-bottom {
@@ -207,6 +302,7 @@
 				display: flex;
 				align-items: center;
 				border-radius: 100%;
+				position: relative;
 				justify-content: center;
 				border: 1px solid #FFFFFF;
 				i {
@@ -218,6 +314,28 @@
 					background-color: #fff;
 					justify-content: center;
 					color: var(--bk-prime-c);
+				}
+				.video_btn_border {
+					top: 0;
+					left: 0;
+					opacity: 0;
+					width: 100%;
+					height: 100%;
+					border-radius: 60px;
+					position: absolute;
+					-webkit-animation-play-state: running;
+					animation-play-state: running;
+					border: 1px solid #fff;
+					-webkit-animation: border_animation 3.9s linear 0s infinite;
+					animation: border_animation 3.9s linear 0s infinite;
+				}
+				.video_btn_border:is(.border_wrap-2) {
+					-webkit-animation-delay: 1.3s;
+					animation-delay: 1.3s;
+				}
+				.video_btn_border:is(.border_wrap-3) {
+					-webkit-animation-delay: 2.6s;
+					animation-delay: 2.6s;
 				}
 			}
 		}
