--- a/assets/scss/home_1/_facility.scss
+++ b/assets/scss/home_1/_facility.scss
@@ -50,7 +50,13 @@
 		}
 	}
 }
-
+@keyframes swing {
+	20% { transform: rotate(15deg); }	
+	40% { transform: rotate(-10deg); }
+	60% { transform: rotate(5deg); }	
+	80% { transform: rotate(-5deg); }	
+	100% { transform: rotate(0deg); }
+}
 .bk-facilites-card-wrap {
 	width: 100%;
 	max-width: 900px;
@@ -68,10 +74,24 @@
 	overflow: hidden;
 	position: relative;
 	border-radius: 24px;
+	position: relative;
 	padding: 65px 40px 44px;
 	background-color: #191919;
 	border: 1px solid #1F1F1F;
 	transition: all 300ms ease-in-out;
+	&:after {
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		height: 0%;
+		z-index: -2;
+		content: '';
+		position: absolute;
+		background-color: #fff;
+		border-radius: 24px;
+		transform-origin: bottom;
+		transition: all 300ms ease-in-out;
+	}
 	@media #{$xxs} {
 		padding: 50px 15px 44px;
 	}
@@ -102,6 +122,7 @@
 		border-radius: 100%;
 		background-color: #1F1F1F;
 		border: 10px solid #181818;
+		transform-origin: top center;
 		transition: all 300ms ease-in-out;
 	}
 	.item-text {
@@ -118,9 +139,12 @@
 		}
 	}
 	&:hover {
-		background-color: #fff;
+		&:after {
+			height: 100%;
+		}
 		&:before {
 			background-color: #F7F6F2;
+			transition-delay: 100ms;
 		}
 		.item-text {
 			h3 {
@@ -132,6 +156,7 @@
 		}
 		.item-icon {
 			border: 10px solid#FFFFFF;
+			animation: swing 2s ease infinite;
 			background-color: var(--bk-prime-c);
 		}
 	}
