--- a/assets/scss/home_1/_price.scss
+++ b/assets/scss/home_1/_price.scss
@@ -35,6 +35,7 @@
 	&:before {
 		top: 0;
 		left: 0;
+		z-index: 1;
 		width: 100%;
 		content: '';
 		height: 100%;
@@ -44,6 +45,7 @@
 	.item-text {
 		top: 48px;
 		left: 48px;
+		z-index: 2;
 		max-width: 405px;
 		position: absolute;
 		@media #{$lg,$xxs} {
