--- a/assets/scss/home_1/_rooms.scss
+++ b/assets/scss/home_1/_rooms.scss
@@ -10,8 +10,27 @@
 }
 .bk-rooms-img1 {
 	margin: 0px 8px;
+	position: relative;
 	display: inline-block;
+	&:before {
+		top: 0;
+		left: 0;
+		opacity: 0;
+		width: 100%;
+		height: 100%;
+		content: '';
+		position: absolute;
+		border-radius: 12px;
+		background-color: var(--bk-prime-c);
+	}
 	img {
 		border-radius: 12px;
+		mix-blend-mode: luminosity;
+		transition: all 500ms ease-in-out;
+	}
+	&:hover {
+		&:before {
+			opacity: 1;
+		}
 	}
 }
