--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2408,55 +2408,35 @@ a:hover, a:focus {
 /*Hero area*/
 /*----------------------------------------------------*/
 @-webkit-keyframes line_animation {
-  0% {
-    top: 0px;
-    opacity: 1;
+  from {
+    bottom: -5%;
   }
-  50% {
-    top: 50%;
-  }
-  100% {
-    top: 100%;
-    opacity: 1;
+  to {
+    bottom: 105%;
   }
 }
 @keyframes line_animation {
-  0% {
-    top: 0px;
-    opacity: 1;
+  from {
+    bottom: -5%;
   }
-  50% {
-    top: 50%;
-  }
-  100% {
-    top: 100%;
-    opacity: 1;
+  to {
+    bottom: 105%;
   }
 }
 @-webkit-keyframes line_animation_2 {
-  0% {
-    opacity: 1;
-    bottom: 0px;
+  from {
+    top: -5%;
   }
-  50% {
-    bottom: 50%;
-  }
-  100% {
-    bottom: 100%;
-    opacity: 1;
+  to {
+    top: 105%;
   }
 }
 @keyframes line_animation_2 {
-  0% {
-    opacity: 1;
-    bottom: 0px;
+  from {
+    top: -5%;
   }
-  50% {
-    bottom: 50%;
-  }
-  100% {
-    bottom: 100%;
-    opacity: 1;
+  to {
+    top: 105%;
   }
 }
 .bk-hero-sec {
@@ -2484,7 +2464,7 @@ a:hover, a:focus {
   width: 3px;
   right: -2px;
   content: "";
-  height: 60px;
+  height: 32px;
   position: absolute;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#C29D68), to(rgba(194, 157, 104, 0)));
   background-image: linear-gradient(-180deg, #C29D68 0%, rgba(194, 157, 104, 0) 100%);
@@ -2494,8 +2474,62 @@ a:hover, a:focus {
           animation: line_animation 20s ease-out infinite;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(odd):before {
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#C29D68), to(rgba(194, 157, 104, 0)));
+  background-image: linear-gradient(360deg, #C29D68 0%, rgba(194, 157, 104, 0) 100%);
   -webkit-animation: line_animation_2 20s linear infinite;
           animation: line_animation_2 20s linear infinite;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(1):before {
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(2):before {
+  -webkit-animation-delay: -2s;
+          animation-delay: -2s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(3):before {
+  -webkit-animation-delay: -3s;
+          animation-delay: -3s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(4):before {
+  -webkit-animation-delay: -4s;
+          animation-delay: -4s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(5):before {
+  -webkit-animation-delay: -5s;
+          animation-delay: -5s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(6):before {
+  -webkit-animation-delay: -6s;
+          animation-delay: -6s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(7):before {
+  -webkit-animation-delay: -7s;
+          animation-delay: -7s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(8):before {
+  -webkit-animation-delay: -8s;
+          animation-delay: -8s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(9):before {
+  -webkit-animation-delay: -9s;
+          animation-delay: -9s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(10):before {
+  -webkit-animation-delay: -10s;
+          animation-delay: -10s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(11):before {
+  -webkit-animation-delay: -11s;
+          animation-delay: -11s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(12):before {
+  -webkit-animation-delay: -12s;
+          animation-delay: -12s;
+}
+.bk-hero-sec .line_animation .line_area:nth-child(13):before {
+  -webkit-animation-delay: -13s;
+          animation-delay: -13s;
 }
 
 .bk-hero-text {
