--- a/assets/scss/home_1/_hero.scss
+++ b/assets/scss/home_1/_hero.scss
@@ -1,27 +1,19 @@
 @keyframes line_animation {
-	0% {
-		top: 0px;
-		opacity: 1;
+	from {
+		bottom: -5%;
 	}
-	50% {
-		top: 50%;
-	}
-	100% {
-		top: 100%;
-		opacity: 1;
+
+	to {
+		bottom: 105%;
 	}
 }
 @keyframes line_animation_2 {
-	0% {
-		opacity: 1;
-		bottom: 0px;
+	from {
+		top: -5%;
 	}
-	50% {
-		bottom: 50%;
-	}
-	100% {
-		bottom: 100%;
-		opacity: 1;
+
+	to {
+		top: 105%;
 	}
 }
 
@@ -47,7 +39,7 @@
 				width: 3px;
 				right: -2px;
 				content: "";
-				height: 60px;
+				height: 32px;
 				position: absolute;
 				background-image: linear-gradient(-180deg, #C29D68 0%, rgba(194, 157, 104, 0) 100%);
 			}
@@ -58,7 +50,74 @@
 			}
 			&:nth-child(odd) {
 				&:before { 
+					background-image: linear-gradient(360deg, #C29D68 0%, rgba(194, 157, 104, 0) 100%);
 					animation: line_animation_2 20s linear infinite;
+				}
+			}
+			&:nth-child(1) {
+				&:before {
+					animation-delay: -1s;
+				}
+			}
+			&:nth-child(2) {
+				&:before {
+					animation-delay: -2s;
+				}
+			}
+			&:nth-child(3) {
+				&:before {
+					animation-delay: -3s;
+				}
+			}
+			&:nth-child(4) {
+				&:before {
+					animation-delay: -4s;
+				}
+			}
+			&:nth-child(5) {
+				&:before {
+					animation-delay: -5s;
+				}
+			}
+			&:nth-child(6) {
+				&:before {
+					animation-delay: -6s;
+				}
+			}
+			&:nth-child(7) {
+				&:before {
+					animation-delay: -7s;
+				}
+			}
+
+			&:nth-child(8) {
+				&:before {
+					animation-delay: -8s;
+				}
+			}
+			&:nth-child(9) {
+				&:before {
+					animation-delay: -9s;
+				}
+			}
+			&:nth-child(10) {
+				&:before {
+					animation-delay: -10s;
+				}
+			}
+			&:nth-child(11) {
+				&:before {
+					animation-delay: -11s;
+				}
+			}
+			&:nth-child(12) {
+				&:before {
+					animation-delay: -12s;
+				}
+			}
+			&:nth-child(13) {
+				&:before {
+					animation-delay: -13s;
 				}
 			}
 		}
