--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2443,22 +2443,24 @@ a:hover, a:focus {
   z-index: 1;
 }
 .bk-hero-sec .line_animation {
-  top: 0px;
-  left: 50%;
-  z-index: -1;
-  width: 100%;
-  bottom: 0px;
-  display: block;
   position: absolute;
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 .bk-hero-sec .line_animation .line_area {
-  width: 7.7%;
+  width: 1px;
   height: 100%;
   position: relative;
-  display: inline-block;
-  border-right: 1px solid #EFE5DC;
+  background: rgba(239, 229, 220, 0.7);
 }
 .bk-hero-sec .line_animation .line_area:before {
   width: 3px;
@@ -2470,66 +2472,66 @@ a:hover, a:focus {
   background-image: linear-gradient(-180deg, #C29D68 0%, rgba(194, 157, 104, 0) 100%);
 }
 .bk-hero-sec .line_animation .line_area:nth-child(even):before {
-  -webkit-animation: line_animation 20s ease-out infinite;
-          animation: line_animation 20s ease-out infinite;
+  -webkit-animation: line_animation 10s linear infinite;
+          animation: line_animation 10s linear infinite;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(odd):before {
   background-image: -webkit-gradient(linear, left bottom, left top, from(#C29D68), to(rgba(194, 157, 104, 0)));
   background-image: linear-gradient(360deg, #C29D68 0%, rgba(194, 157, 104, 0) 100%);
-  -webkit-animation: line_animation_2 20s linear infinite;
-          animation: line_animation_2 20s linear infinite;
+  -webkit-animation: line_animation_2 10s linear infinite;
+          animation: line_animation_2 10s linear infinite;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(1):before {
   -webkit-animation-delay: -1s;
           animation-delay: -1s;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(2):before {
-  -webkit-animation-delay: -2s;
-          animation-delay: -2s;
-}
-.bk-hero-sec .line_animation .line_area:nth-child(3):before {
   -webkit-animation-delay: -3s;
           animation-delay: -3s;
 }
+.bk-hero-sec .line_animation .line_area:nth-child(3):before {
+  -webkit-animation-delay: -6s;
+          animation-delay: -6s;
+}
 .bk-hero-sec .line_animation .line_area:nth-child(4):before {
-  -webkit-animation-delay: -4s;
-          animation-delay: -4s;
+  -webkit-animation-delay: -2s;
+          animation-delay: -2s;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(5):before {
   -webkit-animation-delay: -5s;
           animation-delay: -5s;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(6):before {
-  -webkit-animation-delay: -6s;
-          animation-delay: -6s;
-}
-.bk-hero-sec .line_animation .line_area:nth-child(7):before {
   -webkit-animation-delay: -7s;
           animation-delay: -7s;
 }
+.bk-hero-sec .line_animation .line_area:nth-child(7):before {
+  -webkit-animation-delay: -4s;
+          animation-delay: -4s;
+}
 .bk-hero-sec .line_animation .line_area:nth-child(8):before {
-  -webkit-animation-delay: -8s;
-          animation-delay: -8s;
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(9):before {
-  -webkit-animation-delay: -9s;
-          animation-delay: -9s;
+  -webkit-animation-delay: -3s;
+          animation-delay: -3s;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(10):before {
-  -webkit-animation-delay: -10s;
-          animation-delay: -10s;
+  -webkit-animation-delay: -4s;
+          animation-delay: -4s;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(11):before {
-  -webkit-animation-delay: -11s;
-          animation-delay: -11s;
+  -webkit-animation-delay: -5s;
+          animation-delay: -5s;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(12):before {
-  -webkit-animation-delay: -12s;
-          animation-delay: -12s;
+  -webkit-animation-delay: -7s;
+          animation-delay: -7s;
 }
 .bk-hero-sec .line_animation .line_area:nth-child(13):before {
-  -webkit-animation-delay: -13s;
-          animation-delay: -13s;
+  -webkit-animation-delay: -1s;
+          animation-delay: -1s;
 }
 
 .bk-hero-text {
@@ -2872,14 +2874,6 @@ a:hover, a:focus {
   border: 1px solid #fff;
   -webkit-animation: border_animation 3.9s linear 0s infinite;
   animation: border_animation 3.9s linear 0s infinite;
-}
-.bk-hero-bottom .item-play .item-icon a .video_btn_border:is(.border_wrap-2) {
-  -webkit-animation-delay: 1.3s;
-  animation-delay: 1.3s;
-}
-.bk-hero-bottom .item-play .item-icon a .video_btn_border:is(.border_wrap-3) {
-  -webkit-animation-delay: 2.6s;
-  animation-delay: 2.6s;
 }
 .bk-hero-bottom .item-play .item-text {
   color: #fff;
@@ -4090,6 +4084,7 @@ a:hover, a:focus {
   color: var(--bk-prime-c);
 }
 .bk-blog-item .item-text p {
+  opacity: 0.8;
   padding-bottom: 25px;
 }
 .bk-blog-item .item-text .read_more {
