--- a/assets/scss/home_1/_hero.scss
+++ b/assets/scss/home_1/_hero.scss
@@ -20,21 +20,19 @@
 .bk-hero-sec {
 	z-index: 1;
 	.line_animation {
-		top: 0px;
-		left: 50%;
-		z-index: -1;
-		width: 100%;
-		bottom: 0px;
-		display: block;
 		position: absolute;
-		-webkit-transform: translateX(-50%);
-		transform: translateX(-50%);
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: -3;
+		display: flex;
+		justify-content: space-evenly;
 		.line_area {
-			width: 7.7%;
+			width: 1px;
 			height: 100%;
 			position: relative;
-			display: inline-block;
-			border-right: 1px solid #EFE5DC;
+			background: rgba(239, 229, 220, .7);
 			&:before {
 				width: 3px;
 				right: -2px;
@@ -45,13 +43,13 @@
 			}
 			&:nth-child(even) {
 				&:before { 
-					animation: line_animation 20s ease-out infinite;
+					animation: line_animation 10s linear infinite;
 				}
 			}
 			&:nth-child(odd) {
 				&:before { 
 					background-image: linear-gradient(360deg, #C29D68 0%, rgba(194, 157, 104, 0) 100%);
-					animation: line_animation_2 20s linear infinite;
+					animation: line_animation_2 10s linear infinite;
 				}
 			}
 			&:nth-child(1) {
@@ -61,17 +59,17 @@
 			}
 			&:nth-child(2) {
 				&:before {
-					animation-delay: -2s;
+					animation-delay: -3s;
 				}
 			}
 			&:nth-child(3) {
 				&:before {
-					animation-delay: -3s;
+					animation-delay: -6s;
 				}
 			}
 			&:nth-child(4) {
 				&:before {
-					animation-delay: -4s;
+					animation-delay: -2s;
 				}
 			}
 			&:nth-child(5) {
@@ -81,43 +79,43 @@
 			}
 			&:nth-child(6) {
 				&:before {
-					animation-delay: -6s;
+					animation-delay: -7s;
 				}
 			}
 			&:nth-child(7) {
 				&:before {
-					animation-delay: -7s;
+					animation-delay: -4s;
 				}
 			}
 
 			&:nth-child(8) {
 				&:before {
-					animation-delay: -8s;
+					animation-delay: -1s;
 				}
 			}
 			&:nth-child(9) {
 				&:before {
-					animation-delay: -9s;
+					animation-delay: -3s;
 				}
 			}
 			&:nth-child(10) {
 				&:before {
-					animation-delay: -10s;
+					animation-delay: -4s;
 				}
 			}
 			&:nth-child(11) {
 				&:before {
-					animation-delay: -11s;
+					animation-delay: -5s;
 				}
 			}
 			&:nth-child(12) {
 				&:before {
-					animation-delay: -12s;
+					animation-delay: -7s;
 				}
 			}
 			&:nth-child(13) {
 				&:before {
-					animation-delay: -13s;
+					animation-delay: -1s;
 				}
 			}
 		}
@@ -387,14 +385,6 @@
 					border: 1px solid #fff;
 					-webkit-animation: border_animation 3.9s linear 0s infinite;
 					animation: border_animation 3.9s linear 0s infinite;
-				}
-				.video_btn_border:is(.border_wrap-2) {
-					-webkit-animation-delay: 1.3s;
-					animation-delay: 1.3s;
-				}
-				.video_btn_border:is(.border_wrap-3) {
-					-webkit-animation-delay: 2.6s;
-					animation-delay: 2.6s;
 				}
 			}
 		}
