--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -59,6 +59,24 @@
 /*---------------------------------------------------- */
 
 
+/******* HOME PAGE 1 *******/
+/*Hero area*/
+/*----------------------------------------------------*/
+@import "home_2/hero";
+/*---------------------------------------------------- */
+/*About area*/
+/*----------------------------------------------------*/
+@import "home_2/about";
+/*---------------------------------------------------- */
+/*Rooms area*/
+/*----------------------------------------------------*/
+@import "home_2/rooms";
+/*---------------------------------------------------- */
+/*Service area*/
+/*----------------------------------------------------*/
+@import "home_2/service";
+/*---------------------------------------------------- */
+
 
 
 /*Footer Section*/
