--- a/assets/scss/_predefine.scss
+++ b/assets/scss/_predefine.scss
@@ -66,6 +66,9 @@ body::-webkit-scrollbar-thumb {
 	background-size: 200%, 1px;
 	background-color: var(--bk-prime-c);
 }
+.home-2 {
+	background-color: #fff;
+}
 .ul-li ul {
 	margin: 0;
 	padding: 0;
@@ -96,17 +99,15 @@ body::-webkit-scrollbar-thumb {
 	font-family: var(--bk-heading);
 }
 @keyframes draw {
-	0% {
-		stroke-dashoffset: 1500;
-	}
-	100% {
+	to {
 		stroke-dashoffset: 0;
 	}
 }
 
 @keyframes fillIn {
-	0%   { fill: transparent; }
-	100% { fill: currentColor; }
+	to {
+		fill: currentColor;
+	}
 }
 
 @keyframes fadeScale {
@@ -135,24 +136,18 @@ body::-webkit-scrollbar-thumb {
 		text-align: center;
 		position: absolute;
 		transform: translateY(-50%);
-		svg {
-			width: 260px;
-			animation: fadeScale 1.2s ease-out both;
-			transform-origin: center;
-			opacity: 0;
-		}
 		svg path {
+			stroke: currentColor;
 			stroke-width: 2px;
 			fill: transparent;
-			stroke-linecap: round;
-			stroke-linejoin: round;
-			stroke-dasharray: 1500;
-			stroke-dashoffset: 1500;
-			animation: draw 2.8s ease infinite, fillIn 1s ease infinite 2.8s;
+			stroke-dasharray: 1000;
+			stroke-dashoffset: 1000;
+			animation: draw 3s ease infinite, fillIn 1s ease infinite 3s;
 		}
 		svg path:nth-child(2) {
-			animation-delay: 0.5s, 3.3s;
+			animation-delay: 0.7s, 3.7s;
 		}
+
 	}
 }
 .over-hidden,
@@ -370,6 +365,9 @@ a {
 		padding: 13px 22px;
 		border-radius: 12px;
 		background-color: var(--bk-prime-c);
+		@media #{$xxs} {
+			padding: 10px 20px;
+		}
 		&:hover {
 			background-color: #004040;
 		}
