--- a/assets/scss/home_2/_service.scss
+++ b/assets/scss/home_2/_service.scss
@@ -10,49 +10,51 @@
 	}
 }
 .bk-cus-item {
-	border-radius: 12px ;
-	padding: 40px 32px 35px;
-	background-color: #F7F6F2;
-	transition: all 500ms ease-in-out;
-	.item-icon {
-		width: 80px;
-		height: 80px;
-		margin: 0 auto;
-		margin-bottom: 30px;
-		border-radius: 100%;
-		border: 1px solid var(--bk-prime-c);
+	.inner-item {
+		border-radius: 12px ;
+		padding: 40px 32px 35px;
+		background-color: #F7F6F2;
 		transition: all 500ms ease-in-out;
-		svg {
-			path {
-				transition: all 500ms ease-in-out;
-			}
-		}
-	}
-	.item-text {
-		text-align: center;
-		h3 {
-			font-size: 28px;
-			font-weight: 700;
-			padding-bottom: 14px;
-		}
-		p {
-			font-size: 16px;
-			transition: all 500ms ease-in-out;
-		}
-	}
-	&:hover {
-		background-color: var(--bk-prime-c);
 		.item-icon {
-			border: 1px solid #fff;
+			width: 80px;
+			height: 80px;
+			margin: 0 auto;
+			margin-bottom: 30px;
+			border-radius: 100%;
+			border: 1px solid var(--bk-prime-c);
+			transition: all 500ms ease-in-out;
 			svg {
 				path {
-					fill: #fff;
+					transition: all 500ms ease-in-out;
 				}
 			}
 		}
 		.item-text {
-			h3,p {
-				color: #fff;
+			text-align: center;
+			h3 {
+				font-size: 28px;
+				font-weight: 700;
+				padding-bottom: 14px;
+			}
+			p {
+				font-size: 16px;
+				transition: all 500ms ease-in-out;
+			}
+		}
+		&:hover {
+			background-color: var(--bk-prime-c);
+			.item-icon {
+				border: 1px solid #fff;
+				svg {
+					path {
+						fill: #fff;
+					}
+				}
+			}
+			.item-text {
+				h3,p {
+					color: #fff;
+				}
 			}
 		}
 	}
