--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -76,6 +76,22 @@
 /*----------------------------------------------------*/
 @import "home_2/service";
 /*---------------------------------------------------- */
+/*Facility area*/
+/*----------------------------------------------------*/
+@import "home_2/facility";
+/*---------------------------------------------------- */
+/*Team area*/
+/*----------------------------------------------------*/
+@import "home_2/team";
+/*---------------------------------------------------- */
+/*Testimonial area*/
+/*----------------------------------------------------*/
+@import "home_2/testimonial";
+/*---------------------------------------------------- */
+/*Blog area*/
+/*----------------------------------------------------*/
+@import "home_2/blog";
+/*---------------------------------------------------- */
 
 
 
