--- a/assets/scss/home_2/_about.scss
+++ b/assets/scss/home_2/_about.scss
@@ -46,7 +46,20 @@
 		}
 	}
 }
-
+@keyframes bounceDown {
+	0%, 20%, 50%, 80%, 100% {
+		-webkit-transform: translateY(0);
+		transform: translateY(0);
+	}
+	40% {
+		-webkit-transform: translateY(10px);
+		transform: translateY(10px);
+	}
+	60% {
+		-webkit-transform: translateY(5px);
+		transform: translateY(5px);
+	}
+}
 .bk-ab2-text-wrap {
 	width: 100%;
 	max-width: 1056px;
@@ -58,22 +71,30 @@
 				height: 350px;
 			}
 			img {
+				transition: all 500ms ease-in-out;
 				@media #{$sm,$xs,$xxs} {
 					width: 100%;
 					height: 100%;
 					object-fit: cover;
 				}
 			}
+			&:hover {
+				img {
+					filter: grayscale(1);
+				}
+			}
 		}
 		.item-scroll {
 			top: -87px;
 			right: 140px;
+			z-index: 2;
 			width: 184px;
 			height: 184px;
 			position: absolute;
 			border-radius: 100%;
 			border: 10px solid #fff;
 			background-color: #004040;
+			animation: bounceDown 1.5s infinite;
 			@media #{$sm,$xs,$xxs} {
 				display: none !important;
 			}
