--- a/assets/scss/home_2/_rooms.scss
+++ b/assets/scss/home_2/_rooms.scss
@@ -38,6 +38,9 @@
 			font-size: 32px;
 			font-weight: 700;
 			padding-bottom: 12px;
+			&:hover {
+				color: var(--bk-prime-c);
+			}
 		}
 		ul {
 			gap: 10px 24px;
@@ -59,6 +62,9 @@
 			font-size: 18px;
 			font-weight: 600;
 			transform: translateY(20px);
+			&:hover {
+				letter-spacing: 1px;
+			}
 		}
 	}
 	&:hover {
@@ -100,77 +106,75 @@
 /*------------------------------------*/
 /*------------------------------------*/
 .bk-room3-sec {
-	height: 1080px;
-}
-
-.bk-room3-wrapper {
-	height: 1080px;
 	overflow: hidden;
-	&:nth-child(1) {
-		.bk-room3-area {
+}
+.bk-room3-content {
+	z-index: 1;
+	padding: 200px 0px;
+	@media #{$md,$sm,$xs,$xxs} {
+		padding: 0;
+	}
+	.bk-room3-img {
+		top: 0;
+		left: 0;
+		width: 100%;
+		z-index: -1;
+		height: 100%;
+		position: absolute;
+		@media #{$md,$sm,$xs,$xxs} {
+			display: none;
+		}
+		.item_2_img,
+		.item_3_img {
 			top: 0;
-			position: relative;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			position: absolute;
 		}
 	}
-	.bk-room3-area {
+}
+
+.bk-room3-item {
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 1;
+	margin: 0 auto;
+	max-width: 529px;
+	position: absolute;
+	padding: 48px 32px;
+	@media #{$md,$sm,$xs,$xxs} {
+		position: relative;
+	}
+	&:is(.item_1) {
+		position: relative;
+	}
+	.item-bg {
+		top: 0;
 		left: 0;
-		top: 100%;
-		width: 100%;
-		height: 100%;
+		z-index: -1;
+	}
+	.item-img {
+		height: 268px;
 		overflow: hidden;
-		position: absolute;
-		.bk-room3-item {	
-			.item-room-bg {
-				width: 100%;
-				height: 100%;
-			}
-			.item-room-wrap {
-				top: 50%;
-				left: 0;
-				right: 0;
-				z-index: 1;
-				margin: 0 auto;
-				max-width: 530px;
-				position: absolute;
-				padding: 50px 32px 70px;
-				transform: translateY(-50%);
-				.item-bg {
-					top: 0;
-					left: 0;
-					z-index: -1;
-					width: 100%;
-					height: 100%;
-				}
-				.item-img {
-					height: 268px;
-					max-width: 465px;
-					overflow: hidden;
-					border-radius: 12px;
-					margin-bottom: 32px;
-				}
-				.item-top {
-					padding: 0px 16px;
-					margin-bottom: 60px;
-				}
-				.item-text {
-					h3 {
-						font-size: 32px;
-						font-weight: 700;
-						padding-bottom: 16px;
-					}
-					p {
-						opacity: .8;
-						margin: 0 auto;
-						max-width: 435px;
-						padding-bottom: 40px;
-					}
-					.read_more {
-						color: #000000;
-						font-size: 20px;
-						font-weight: 500;
-					}
-				}
-			}
+		margin-bottom: 30px;
+		border-radius: 12px;
+	}
+	.item-text {
+		h3 {
+			font-size: 32px;
+			font-weight: 700;
+			padding-bottom: 16px;
+		}
+		p {
+			padding-bottom: 40px;
+		}
+		.read_more {
+			opacity: .8;
+			font-size: 20px;
+			font-weight: 500;
+			padding-bottom: 30px;
 		}
 	}
 }
