--- a/assets/scss/home_2/_rooms.scss
+++ b/assets/scss/home_2/_rooms.scss
@@ -1,4 +1,17 @@
 .bk-room2-sec {
+	z-index: 1;
+	position: relative;
+	&:before {
+		top: 0;
+		left: 0;
+		z-index: -1;
+		width: 100%;
+		content: '';
+		height: 100%;
+		position: absolute;
+		background-color: #F7F6F2;
+		clip-path: polygon( 100% 100%,0% 100%,0% 11.879%,0.026% 11.835%,0.026% 11.835%,7.353% 8.682%,14.047% 6.167%,20.149% 4.215%,25.699% 2.751%,30.739% 1.7%,35.308% 0.986%,39.447% 0.535%,43.196% 0.27%,46.596% 0.117%,49.688% 0.001%,49.688% 0.001%,56.561% 0.207%,63.139% 0.83%,69.378% 1.795%,75.236% 3.026%,80.671% 4.45%,85.639% 5.991%,90.098% 7.575%,94.007% 9.126%,97.321% 10.572%,100% 11.835%,100% 100% );
+	}
 	.bk-sec-title {
 		margin: 0 auto;
 		max-width: 505px;
